# ipaTool

./: .dockerignore  .env.example  .gitignore  .npmrc  CHANGELOG.md  COMPARISON.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.rust  ESA_DEPLOYMENT.md  MIGRATION.md  PAGES_DEPLOYMENT.md  README.md  README_ESA.md  RUST_BACKEND_OVERVIEW.md  RUST_BACKEND_SUMMARY.md  UPGRADE.md  build-rust.sh  deploy.sh  dev-rust.sh  docker-compose.rust.yml  docker-compose.yml  esa-pages.yaml  esa.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.js  vercel.json  vite.config.js
.github/workflows/: ci.yml  docker-build.yml  docker.yml
api/: download.js  login.js  versions.js
backend-rust/: .env.example  .gitignore  Cargo.toml  INSTALL.md  QUICKSTART.md  README.md
backend-rust/src/: config.rs  crypto.rs  db.rs  error.rs  main.rs  models.rs
backend-rust/src/api/: download.rs  login.rs  mod.rs  versions.rs
backend-rust/src/services/: apple_auth.rs  ipa_handler.rs  mod.rs  signature.rs
data/: ipa-webtool.db
docs/: GITHUB_ACTIONS_GUIDE.md  HTTPS_DEPLOYMENT.md  README.md  database-architecture.md  download-workflow-improvements.md
public/: index.html  main.js  styles.css
scripts/: verify-build.sh
server/: Cargo.toml  index.js
server/api/: download.js  login.js  versions.js
server/services/: apple-auth.js  database.js  ipa-handler.js  key-manager.js  signature.js
server/src/: apple_auth.rs  database.rs  ipa_handler.rs  key_manager.rs  lib.rs  main.rs  signature.rs
src/: App.vue  ipa.js  main.js  style.css
src/components/: AccountManager.vue  AppSearch.vue  DownloadManager.vue  DownloadQueue.vue  TabLayout.vue
src/composables/: useDark.js  useStorage.js
src/services/: api.js
src/stores/: app.js
