[package]
name = "ipa-webtool-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web 框架
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# 加密
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }

# 文件处理
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 环境变量
dotenv = "0.15"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步 trait
async-trait = "0.1"

# plist 解析
plist = "1.7"

# Cookie 处理
cookie = "0.18"
cookie_store = "0.21"

# 压缩
zip = "2.2"

# Base64 编码
base64 = "0.22"

# Hex 编码
hex = "0.4"

# 静态变量
lazy_static = "1.5"

# 异步流
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
