[package]
name = "ipa-webtool-services"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
actix-web = "4.4"
rusqlite = { version = "0.29", features = ["bundled", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies", "blocking", "stream"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8"
plist = "1.5"
tokio = { version = "1.0", features = ["fs", "io-util", "full"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
zip = "2.0"
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
urlencoding = "2.1"